Fix all plugin versions in tests. now those are not hard-coded anymore