@@ -31,6 +31,10 @@ sbtPlugin := true
 
 ScriptedPlugin.scriptedSettings
 
+scriptedLaunchOpts := { scriptedLaunchOpts.value ++
+  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + (version in ThisBuild).value)
+}
+
 addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.0.0" % "provided")
 
 graphSettings
